build/log/idf_py_stdout_output_22228
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/onur/esp-ws/voyager_v2.2/build/bootloader/esp-idf/esptool_py && /home/onur/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/onur/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/onur/esp-ws/voyager_v2.2/build/bootloader/bootloader.bin
Bootloader binary size 0x5200 bytes. 0x2e00 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/buttons/CMakeFiles/__idf_buttons.dir/buttons.c.obj
FAILED: esp-idf/buttons/CMakeFiles/__idf_buttons.dir/buttons.c.obj 
/home/onur/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/onur/esp-ws/voyager_v2.2/build/config -I/home/onur/esp-ws/voyager_v2.2/components/buttons/include -I/home/onur/esp/esp-idf/components/newlib/platform_include -I/home/onur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/onur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/onur/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/onur/esp/esp-idf/components/freertos/esp_additions/include -I/home/onur/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/onur/esp/esp-idf/components/esp_hw_support/include -I/home/onur/esp/esp-idf/components/esp_hw_support/include/soc -I/home/onur/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/onur/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/onur/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/onur/esp/esp-idf/components/heap/include -I/home/onur/esp/esp-idf/components/log/include -I/home/onur/esp/esp-idf/components/soc/include -I/home/onur/esp/esp-idf/components/soc/esp32s3 -I/home/onur/esp/esp-idf/components/soc/esp32s3/include -I/home/onur/esp/esp-idf/components/hal/esp32s3/include -I/home/onur/esp/esp-idf/components/hal/include -I/home/onur/esp/esp-idf/components/hal/platform_port/include -I/home/onur/esp/esp-idf/components/esp_rom/include -I/home/onur/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/onur/esp/esp-idf/components/esp_rom/esp32s3 -I/home/onur/esp/esp-idf/components/esp_common/include -I/home/onur/esp/esp-idf/components/esp_system/include -I/home/onur/esp/esp-idf/components/esp_system/port/soc -I/home/onur/esp/esp-idf/components/esp_system/port/include/private -I/home/onur/esp/esp-idf/components/xtensa/include -I/home/onur/esp/esp-idf/components/xtensa/esp32s3/include -I/home/onur/esp/esp-idf/components/lwip/include -I/home/onur/esp/esp-idf/components/lwip/include/apps -I/home/onur/esp/esp-idf/components/lwip/include/apps/sntp -I/home/onur/esp/esp-idf/components/lwip/lwip/src/include -I/home/onur/esp/esp-idf/components/lwip/port/include -I/home/onur/esp/esp-idf/components/lwip/port/freertos/include -I/home/onur/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/onur/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/onur/esp/esp-idf/components/driver/include -I/home/onur/esp/esp-idf/components/driver/deprecated -I/home/onur/esp/esp-idf/components/driver/analog_comparator/include -I/home/onur/esp/esp-idf/components/driver/dac/include -I/home/onur/esp/esp-idf/components/driver/gpio/include -I/home/onur/esp/esp-idf/components/driver/gptimer/include -I/home/onur/esp/esp-idf/components/driver/i2c/include -I/home/onur/esp/esp-idf/components/driver/i2s/include -I/home/onur/esp/esp-idf/components/driver/ledc/include -I/home/onur/esp/esp-idf/components/driver/mcpwm/include -I/home/onur/esp/esp-idf/components/driver/parlio/include -I/home/onur/esp/esp-idf/components/driver/pcnt/include -I/home/onur/esp/esp-idf/components/driver/rmt/include -I/home/onur/esp/esp-idf/components/driver/sdio_slave/include -I/home/onur/esp/esp-idf/components/driver/sdmmc/include -I/home/onur/esp/esp-idf/components/driver/sigma_delta/include -I/home/onur/esp/esp-idf/components/driver/spi/include -I/home/onur/esp/esp-idf/components/driver/temperature_sensor/include -I/home/onur/esp/esp-idf/components/driver/touch_sensor/include -I/home/onur/esp/esp-idf/components/driver/twai/include -I/home/onur/esp/esp-idf/components/driver/uart/include -I/home/onur/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/onur/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/onur/esp/esp-idf/components/esp_pm/include -I/home/onur/esp/esp-idf/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/onur/esp-ws/voyager_v2.2=. -fmacro-prefix-map=/home/onur/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/buttons/CMakeFiles/__idf_buttons.dir/buttons.c.obj -MF esp-idf/buttons/CMakeFiles/__idf_buttons.dir/buttons.c.obj.d -o esp-idf/buttons/CMakeFiles/__idf_buttons.dir/buttons.c.obj -c /home/onur/esp-ws/voyager_v2.2/components/buttons/buttons.c
In file included from /home/onur/esp-ws/voyager_v2.2/components/buttons/buttons.c:7:
/home/onur/esp-ws/voyager_v2.2/components/buttons/buttons.c: In function 'gpio_isr_handler':
/home/onur/esp-ws/voyager_v2.2/components/buttons/buttons.c:15:23: error: 'gpio_evt_queue' undeclared (first use in this function)
   15 |     xQueueSendFromISR(gpio_evt_queue, &gpio_num, NULL);
      |                       ^~~~~~~~~~~~~~
/home/onur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/queue.h:1352:33: note: in definition of macro 'xQueueSendFromISR'
 1352 |     xQueueGenericSendFromISR( ( xQueue ), ( pvItemToQueue ), ( pxHigherPriorityTaskWoken ), queueSEND_TO_BACK )
      |                                 ^~~~~~
/home/onur/esp-ws/voyager_v2.2/components/buttons/buttons.c:15:23: note: each undeclared identifier is reported only once for each function it appears in
   15 |     xQueueSendFromISR(gpio_evt_queue, &gpio_num, NULL);
      |                       ^~~~~~~~~~~~~~
/home/onur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/queue.h:1352:33: note: in definition of macro 'xQueueSendFromISR'
 1352 |     xQueueGenericSendFromISR( ( xQueue ), ( pvItemToQueue ), ( pxHigherPriorityTaskWoken ), queueSEND_TO_BACK )
      |                                 ^~~~~~
/home/onur/esp-ws/voyager_v2.2/components/buttons/buttons.c: At top level:
/home/onur/esp-ws/voyager_v2.2/components/buttons/buttons.c:12:23: warning: 'gpio_isr_handler' defined but not used [-Wunused-function]
   12 | static void IRAM_ATTR gpio_isr_handler(void* arg)
      |                       ^~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
